# flightmaster

./: CMakeLists.txt  README.md
db/: airport-frequencies.csv  navaids.csv  runways.csv
examples/: KOAK_KLVK_KO88.txt  KOAK_KSUU_KMOD_KRHV_auto.txt  LIDF_LIPK_LIPE_auto.txt  LIDF_LIPY_LIBP_auto.txt  LIDF_LIPY_auto.txt  test_plan.txt
fixes/: us_fixes.csv
scripts/: KOAK_KLVK_KO88.txt  test_plan.txt
src/: CMakeLists.txt  flightmaster.cpp  flightmaster.h  fplan.cpp  fplan.h  usfixes.cpp  utilities.h
work/: Filght Planning Worksheet.xls  Test_log_format.pages  U_WindTriangle2.pas  cu.cpp  from_gps.txt  test_flog_plain.txt
